--- a/Serverless.StaticWebApp/Serverless.StaticWebApp.csproj
+++ b/Serverless.StaticWebApp/Serverless.StaticWebApp.csproj
@@ -2,6 +2,38 @@
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="www\index.html" />
+    <None Remove="www\vendor\bootstrap\css\bootstrap.css" />
+    <None Remove="www\vendor\bootstrap\css\bootstrap.min.css" />
+    <None Remove="www\vendor\jquery\jquery.js" />
+    <None Remove="www\vendor\jquery\jquery.min.js" />
+    <None Remove="www\vendor\jquery\jquery.slim.js" />
+    <None Remove="www\vendor\jquery\jquery.slim.min.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="www\index.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="www\vendor\bootstrap\css\bootstrap.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="www\vendor\bootstrap\css\bootstrap.min.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="www\vendor\jquery\jquery.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="www\vendor\jquery\jquery.min.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="www\vendor\jquery\jquery.slim.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="www\vendor\jquery\jquery.slim.min.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup>    
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.2" />
   </ItemGroup>
